[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Icons/WaterIcon.png" type="Texture" id=1]
[ext_resource path="res://addons/GameTemplate/Autoload/Hud.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/pixellocale_8.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Images/Icons/MineralIcon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Icons/EnergyIcon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Icons/FoodLeafIcon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Icons/BarritaEnergia.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Icons/BarritaEnergiaFull.png" type="Texture" id=8]

[node name="Hud" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
mouse_filter = 2

[node name="Bg" type="ColorRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer"]
margin_right = 312.0
color = Color( 0.0784314, 0.133333, 0.25098, 1 )

[node name="Top" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 312.0
margin_bottom = 28.0
mouse_filter = 2

[node name="MineralIcon" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )

[node name="MineralNum" type="Label" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 20.0
margin_top = 3.0
margin_right = 35.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="PowerIcon" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 39.0
margin_right = 55.0
margin_bottom = 24.0
texture = ExtResource( 5 )

[node name="PowerNum" type="Label" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 59.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "140"

[node name="FoodIcon" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 78.0
margin_right = 94.0
margin_bottom = 24.0
texture = ExtResource( 6 )

[node name="FoodNum" type="Label" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 98.0
margin_top = 3.0
margin_right = 113.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "120"

[node name="WaterIcon" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 117.0
margin_right = 133.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="WaterNum" type="Label" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 137.0
margin_top = 3.0
margin_right = 152.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "200"

[node name="Barrita" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top"]
margin_left = 156.0
margin_right = 284.0
margin_bottom = 24.0
texture = ExtResource( 7 )

[node name="BarritaAdentro" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Top/Barrita"]
margin_right = 128.0
margin_bottom = 24.0
rect_clip_content = true
texture = ExtResource( 8 )

[node name="Bottom" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 312.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/GUI/MarginContainer/VBoxContainer/Bottom"]
margin_right = 116.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "Press 'N' for notebook"
